[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/chare.png" type="Texture" id=1]
[ext_resource path="res://BuidingMaster.gd" type="Script" id=2]

[sub_resource type="TileSet" id=3]
0/name = "chare.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 8, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 16, 16, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 32, 0, 32, 0, 16, 16, 16 )

[sub_resource type="TileSet" id=2]
0/name = "chare.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 8, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="BuildingMaster" type="Node2D"]
script = ExtResource( 2 )

[node name="CursorMap" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.290196 )
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="BuildingMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="BuildingObjects" type="Node2D" parent="."]
